[project]
name = "dh-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "auto-py-to-exe>=2.45.1",
    "customtkinter>=5.2.2",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "qrcode>=8.0",
    "reportlab>=4.2.5",
    "tabulate>=0.9.0",
    "ttkbootstrap>=1.10.1",
]
